--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -87,18 +87,18 @@
          be sent during a change to the audio output device. -->
     <bool name="config_sendAudioBecomingNoisy">true</bool>
 
-    <!-- The duration (in milliseconds) of a short animation. stock 200 -->
-    <integer name="config_shortAnimTime">100</integer>
+    <!-- The duration (in milliseconds) of a short animation. -->
+    <integer name="config_shortAnimTime">200</integer>
 
-    <!-- The duration (in milliseconds) of a medium-length animation. stock 400 -->
-    <integer name="config_mediumAnimTime">300</integer>
+    <!-- The duration (in milliseconds) of a medium-length animation. -->
+    <integer name="config_mediumAnimTime">400</integer>
 
-    <!-- The duration (in milliseconds) of a long animation. stock 500 -->
-    <integer name="config_longAnimTime">400</integer>
+    <!-- The duration (in milliseconds) of a long animation. -->
+    <integer name="config_longAnimTime">500</integer>
 
-    <!-- The duration (in milliseconds) of the activity open/close and fragment open/close animations. stock 150/220 -->
-    <integer name="config_activityShortDur">100</integer>
-    <integer name="config_activityDefaultDur">170</integer>
+    <!-- The duration (in milliseconds) of the activity open/close and fragment open/close animations. -->
+    <integer name="config_activityShortDur">150</integer>
+    <integer name="config_activityDefaultDur">220</integer>
 
     <!-- Duration for the dim animation behind a dialog.  This may be either
          a percentage, which is relative to the duration of the enter/open
